# swagger.json
@@ -24,6 +24,34 @@
         }
       }
     },
+    "/login": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Redirect to GitHub Authentication",
+        "description": "Click <a href=\"/login\">here</a> to authenticate with GitHub.",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Logout User",
+        "description": "Click <a href=\"/logout\">here</a> to log out and return to the homepage.",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "tags": [
@@ -81,6 +109,9 @@
             "schema": {
               "$ref": "#/definitions/User"
             }
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -153,6 +184,9 @@
               "$ref": "#/definitions/User"
             }
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -179,6 +213,9 @@
         "responses": {
           "200": {
             "description": "User deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -246,6 +283,9 @@
             "schema": {
               "$ref": "#/definitions/Product"
             }
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -318,6 +358,9 @@
               "$ref": "#/definitions/Product"
             }
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -344,6 +387,9 @@
         "responses": {
           "200": {
             "description": "Product deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
